--- a/Facility/css/style.css
+++ b/Facility/css/style.css
@@ -481,3 +481,33 @@
     filter: brightness(50%);    
 
 }
+
+#myInput {
+
+    position: relative;
+}
+#myUL { 
+    display: none;
+    position: absolute;
+    top: 72%;
+    min-width: 207px;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+
+  #myUL li a {
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block;
+  }
+  
+  #myUL li a:hover:not(.header) {
+    background-color: #eee;
+  }
